--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -27,7 +27,7 @@ library(morrowplots)
 
 # The Experiment 
 
-Established in 1876, the Morrow Plots at the University of Illinois Urbana Champaign are the longest-running continuous agricultural fields in the Americas. They test the impact of soil treatments and crop rotation on corn, Illinois's most important crop. Data collection began in 1888 and has recorded planting, treatment, and yield data annually since then.
+Established in 1876, the Morrow Plots at the University of Illinois Urbana Champaign are the longest-running continuous agricultural fields in the Americas. They test the impact of soil fertility treatments and crop rotation on corn, Illinois's most important crop. Data collection began in 1888 and has recorded planting, treatment, and yield data annually since then.
 
 \
 
@@ -43,11 +43,11 @@ Experiments like this one are essential for testing how common farming practices
 
 # The Dataset
 
-The dataset is structured to reflect the way the actual crop field is organized and planted. The current field is separated into 3 plots - 3, 4, and 5. Originally, there were 10 plots, but over time plots 1,2 and 6-10 were ceded to the campus for building projects as the university grew. This dataset contains data for the 3 enduring plots - plots 3, 4, and 5 - and covers 1888 through 2021.
+The dataset is structured to reflect the way the actual crop field is organized and planted. The current field is separated into 3 plots - 3, 4, and 5. Originally, there were 10 plots, but over time plots 1,2 and 6-10 were for campus building projects as the university grew. This dataset contains data for the 3 enduring plots - plots 3, 4, and 5 - and covers 1888 through 2021. 
 
 ## Plots and Crop Rotation
 
-Each plot tests a different crop rotation. Plot 3 grows corn every year. Plot 4 has a two-crop rotation of corn and soybeans - meaning one year it grows corn, the next year it grows soybeans, and alternates every year. Plot 5 has a three-crop rotation of corn, oats, and hay. Over the years, the non-corn crops have changed somewhat to reflect changing farming practices, but the corn has remained consistent because it's the focus of the experiment. 
+Each plot tests a different crop rotation. Plot 3 grows corn every year. Plot 4 has a two-crop rotation that alternates every year. At first Plot 4 alternated between corn and oats. It changed to corn and soybeans in 1967. Plot 5 has a three-crop rotation of corn, oats, and hay. Over the years, the non-corn crops have changed somewhat to reflect changing farming practices, but the corn has remained consistent because it's the focus of the experiment. 
 
 ![Plot map with crop rotations.](plotmap_simple.png){width=50%}
 
@@ -55,21 +55,21 @@ Each plot tests a different crop rotation. Plot 3 grows corn every year. Plot 4 
 
 ## Subplots and Soil Treatments
 
-Each of the 3 plots is divided into eight subplots - four Northern subplots (NA, NB, NC, and ND) and four Southern subplots (SA, SB, SC, and SD) - that test different soil treatments, which might commonly be called fertilizers, like manure, limestone, and nitrogen. Some of the subplots have never received any soil treatments. Other subplots have received different treatments over different phases of the experiment. 
+Each of the 3 plots is divided into eight subplots - four Northern subplots (NA, NB, NC, and ND) and four Southern subplots (SA, SB, SC, and SD) - that test different fertility treatments like manure, limestone, and nitrogen. Some of the subplots have never received any treatments. Other subplots have received different treatments over different phases of the experiment. 
 
-![Subplots that test different soil treatments.](plotmap_simple_subplots.png){width=50%}
+![Arragement of subplots, which are used to test different fertility treatments.](plotmap_simple_subplots.png){width=50%}
 
 \
 
 ## Yield and Other Variables
 
-Each row of the dataset represents one year of data for one subplot, and records observations about the crop planted, the treatments employed, and the yields harvested. The key measure is yield, which is recorded as a rate of yield per acre. Different crops are measured differently, which is why there are two yield columns in the dataset - one for bushels per acre and one for tons per acre. Corn is the focus of the experiment, and is always measured in bushels. We have included yields for the other crops wherever possible, but in some years they weren't recorded because they weren't considered necessary. Null values like these are represented by NAs. There are many NAs in the dataset because some extra details - like the corn variety planted and the specific amount of treatment applied - were recorded for some years and not others. These extra details are included wherever possible. 
+Each row of the dataset represents one year of data for one subplot, and records observations about the crop planted, the treatments employed, and the yields harvested. The key measure is yield, which is recorded as a rate of yield per acre. Different crops are measured differently, which is why there are two yield columns in the dataset - one for bushels per acre and one for tons per acre. Corn is the focus of the experiment, and is always measured in bushels. Yields for the other crops are included wherever possible, but in some years they weren't recorded. Null values like these are represented by NAs. There are many NAs in the dataset because some extra details - like the corn variety planted and the specific amount of treatment applied - were recorded for some years and not others. These extra details are included wherever possible. 
 
 \
 
 # Changes over Time
 
-This experiment is designed to reflect common farming practices, which change over time. For example, originally the two-crop rotation in plot 4 alternated between corn and oats. Oats were a popular crop because they were used to feed the horses and other draft animals that worked on farms. Over time machines replaced draft animals, and farmers replaced oats with commercial crops like soybeans. In 1968, the two-crop rotation changed to corn and soybeans to reflect the fact that soybeans had become the second-most popular crop in Illinois. 
+This experiment is designed to reflect common farming practices, which change over time. For example, originally the two-crop rotation in Plot 4 alternated between corn and oats. Oats were a popular crop because they were used to feed the horses and other draft animals that worked on farms. Over time machines replaced draft animals, and farmers replaced oats with commercial crops like soybeans. In 1967, the two-crop rotation changed to corn and soybeans to reflect the fact that soybeans had become the second-most popular crop in Illinois. 
 
 ## Phases
 
