--- a/vignettes/plots-etcetera.Rmd
+++ b/vignettes/plots-etcetera.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Plots Extras"
+title: "Plots Etcetera"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Plots Extras}
