minor updates to language in description, news, vignettes

--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -81,7 +81,7 @@ Major changes to the experiment are marked as different phases. This dataset inc
 
 ## Consistency
 
-**Even though the plots haven't always had eight subplots, every single year of the dataset is broken up into eight subplots for consistency's sake.** This allows for longitudinal comparisons over the entire course of the experiment, and it's possible because yield was always recorded as a rate. It's also why some of the yield data looks duplicated. For example, look at the yield values for plot 3 in 1888. All eight subplots have the same yield value of 54.3 bushels per acre. That's because yield was only measured once for all of plot 3, but since it was measured as a rate of bushels per acre, that same rate applies to all of plot 3 and to any portion of it. It's like miles per hour - 50 mph is 50 mph whether you travel for one mile or 100 miles. Because yield was measured as a rate instead of a total count, we can structure the data so every year always has data for eight subplots, allowing for consistent comparisons across the entire course of the experiment.
+**Even though the plots haven't always had eight subplots, every year in the dataset is broken up into eight subplots for consistency's sake.** This allows for longitudinal comparisons over the entire course of the experiment, and it's possible because yield was always recorded as a rate. It's also why some of the yield data looks duplicated. For example, look at the yield values for plot 3 in 1888. All eight subplots have the same yield value of 54.3 bushels per acre. That's because yield was only measured once for all of plot 3, but since it was measured as a rate of bushels per acre, that same rate applies to all of plot 3 and to any portion of it. It's like miles per hour - 50 mph is 50 mph whether you travel for one mile or 100 miles. Because yield was measured as a rate instead of a total count, we can structure the data so every year always has data for eight subplots, allowing for consistent comparisons across the entire course of the experiment.
 
 ## The Future
 
